spacing fix

--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ url("fonts/PT-F5-Regular.otf") format("opentype");
     --h2-size: calc(var(--body-size)*3);
     --h3-size: calc(var(--body-size)*1.5);
     --h4-size: calc(var(--body-size)*1);
-    --spacing: calc(var(--body-size)*var(--line-height-multiplier));
+    --spacing: calc(var(--body-size)*1);
     --max-width: calc( 960px + calc(var(--spacing)*4) );
     --border-width: 1.5px;
 }
